--- a/4.2_loops__exercises/loops_(good)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(good)_exercises.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 30,
    "id": "35534120-1dc7-4879-b277-0b232772f543",
    "metadata": {},
    "outputs": [
@@ -29,10 +29,10 @@
     {
      "data": {
       "text/plain": [
-       "0.00017389998538419604"
+       "0.00013040000339969993"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,12 +43,13 @@
     "        if number % 2 == 0:\n",
     "            continue\n",
     "        print (number**2)\n",
-    "timeit.timeit('oddsquares()', globals=globals(), number = 1)"
+    "timeit.timeit('oddsquares()', globals=globals(), number = 1)\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "34f88e03-66db-4c0a-91a9-83e2b892dc24",
    "metadata": {},
    "outputs": [],
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 35,
    "id": "0bca383f-1cd2-44ed-b9b2-274bd3cb8768",
    "metadata": {},
    "outputs": [
@@ -68,19 +69,31 @@
      "text": [
       "[1, 9, 25, 49, 81]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3.8000289350748062e-06"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "def oddsquares2():\n",
     "    squares = [x ** 2 for x in range(1,10,2)]\n",
     "print(squares)\n",
+    "timeit.timeit('oddsquares2()', globals=globals(), number = 1)\n",
     "\n",
+    " \n",
     "                    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "id": "9a9b2ebf-d58b-4575-a3dc-e2b54fbcd105",
    "metadata": {},
    "outputs": [],
@@ -90,24 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "59903ac0-8a31-4a56-82e5-2ae9771ac9f4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7.419998291879892e-05"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "timeit.timeit('oddsquares2()', globals=globals(), number = 1)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -119,31 +119,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "e0a60c76-89ef-43e3-b821-63fe1db8fc14",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n",
-      "95.0\n",
-      "90.25\n",
-      "85.7375\n",
-      "81.45062499999999\n",
-      "77.37809374999999\n",
-      "73.50918906249998\n",
-      "69.83372960937498\n",
-      "66.34204312890623\n",
-      "63.02494097246091\n",
-      "59.87369392383786\n",
-      "56.880009227645964\n",
-      "54.03600876626366\n",
-      "51.33420832795048\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "units=100\n",
     "while units>50:\n",
@@ -161,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "id": "64d6e009-67bf-4b86-aeed-d8a2de0b4598",
    "metadata": {},
    "outputs": [],
@@ -179,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 9,
    "id": "2ac992bc-3e31-4bee-a297-59729f138eeb",
    "metadata": {},
    "outputs": [
@@ -218,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 10,
    "id": "51771d3a-105c-4d64-b9bf-d88887d6b6d4",
    "metadata": {},
    "outputs": [
@@ -236,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 11,
    "id": "1c6633c0-673c-4d8c-a6fc-770ba6fcea16",
    "metadata": {},
    "outputs": [
@@ -244,7 +223,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2016, 404.24) 3.410000000000025\n"
+      "2016 3.410000000000025\n"
      ]
     }
    ],
@@ -252,7 +231,7 @@
     "for i in range (0,len(co2_data)):\n",
     "  if co2_data[i][1]-co2_data[i-1][1]<3:\n",
     "      continue\n",
-    "  print(co2_data[i],co2_data[i][1]-co2_data[i-1][1])\n",
+    "  print(co2_data[i][0],co2_data[i][1]-co2_data[i-1][1])\n",
     "    \n",
     "        "
    ]
