--- a/6.2_files,_folders_&_os__exercises/files,_folders_&_os_(need)_exercises.ipynb
+++ b/6.2_files,_folders_&_os__exercises/files,_folders_&_os_(need)_exercises.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 285,
    "id": "eaa87377-d741-4da6-8fd0-3dc128925d69",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 286,
    "id": "a31f44de-8d76-4fe7-bd10-27c469066cb0",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 485,
    "id": "d57d64ae-026b-4b63-8f15-229406644ed2",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 339,
+   "id": "7fe66229-0de1-4972-8a96-1a3436b1924a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'04'"
+      ]
+     },
+     "execution_count": 339,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "month_number['apr']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 288,
    "id": "e67bd1b2-3925-4c6f-87e1-62df870cbfdd",
    "metadata": {},
    "outputs": [
@@ -58,18 +79,18 @@
        "'10'"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 288,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "month_number[\"oct\"]"
+    "month_number[\"oct\"]  #Using the function of dictionary key"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 289,
    "id": "57549701-5466-4962-9512-a17860e52df0",
    "metadata": {},
    "outputs": [],
@@ -79,17 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "id": "fe6539b1-eff6-44ca-ba6f-42aa14e99cad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_filename = f'{month_number[\"oct\"]}-08_singapore.txt'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 389,
    "id": "91318f31-0924-4689-8455-4f584f2d93b4",
    "metadata": {},
    "outputs": [
@@ -102,13 +113,349 @@
     }
    ],
    "source": [
-    "print(new_filename)"
+    "print(new_file_name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b6d0d1b1-8a33-4059-8079-cce1bb2ed656",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 408,
    "id": "09c0fba9-64db-43ba-8cff-04c9a92d1357",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "old_file_name = f'{\"mth\"}-{date}_{city}.txt'   #I used mth instead of month to match up with the 3 character short form used for the months"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 423,
+   "id": "5c6b7c63-056f-43d5-b108-f0295b2dab38",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'10-08_singapore.txt'"
+      ]
+     },
+     "execution_count": 423,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def rename_my_file(old_file_name):\n",
+    "    for mth in month_number:\n",
+    "        if mth == old_file_name[0:3]:  #Strings can be seen as arrays of characters\n",
+    "            return f\"{month_number[mth]}{old_file_name[3:]}\"  # old_file_name[3:] gives me the -date_city,txt\n",
+    "\n",
+    "rename_my_file(\"oct-08_singapore.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 424,
+   "id": "aeece37d-c0b4-416e-abe4-1bb53bcb32ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'05-15_dhaka.txt'"
+      ]
+     },
+     "execution_count": 424,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rename_my_file(\"may-15_dhaka.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 426,
+   "id": "4f2de195-e3b6-4ccd-aa80-b609a0cc54f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dates=['oct-08_singapore.txt', 'jul-10_cairo.txt', 'may-15_dhaka.txt',\n",
+    " 'may-13_cairo.txt', 'oct-21_cairo.txt', 'jan-10_singapore.txt',\n",
+    " 'jun-20_tokyo.txt', 'aug-06_jakarta.txt', 'dec-21_karachi.txt',\n",
+    " 'jan-01_tokyo.txt']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 473,
+   "id": "efd2bcb2-5425-461c-a238-6145ec846f8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "oct-08_singapore.txt ---->\t10-08_singapore.txt\n",
+      "jul-10_cairo.txt ---->\t07-10_cairo.txt\n",
+      "may-15_dhaka.txt ---->\t05-15_dhaka.txt\n",
+      "may-13_cairo.txt ---->\t05-13_cairo.txt\n",
+      "oct-21_cairo.txt ---->\t10-21_cairo.txt\n",
+      "jan-10_singapore.txt ---->\t01-10_singapore.txt\n",
+      "jun-20_tokyo.txt ---->\t06-20_tokyo.txt\n",
+      "aug-06_jakarta.txt ---->\t08-06_jakarta.txt\n",
+      "dec-21_karachi.txt ---->\t12-21_karachi.txt\n",
+      "jan-01_tokyo.txt ---->\t01-01_tokyo.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "for date in dates:\n",
+    "    print(f\"{date} ---->\", end='\\t')\n",
+    "    print((rename_my_file(date)))\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 491,
+   "id": "f49baee4-fad7-4f12-b56e-18980002e7d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['os-collaboration-exercise-data\\\\apr-01_melbourne.txt',\n",
+       " 'os-collaboration-exercise-data\\\\apr-03_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\apr-06_manila.txt',\n",
+       " 'os-collaboration-exercise-data\\\\apr-07_manila.txt',\n",
+       " 'os-collaboration-exercise-data\\\\apr-07_singapore.txt',\n",
+       " 'os-collaboration-exercise-data\\\\apr-11_melbourne.txt',\n",
+       " 'os-collaboration-exercise-data\\\\apr-12_karachi.txt',\n",
+       " 'os-collaboration-exercise-data\\\\apr-12_osaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\apr-15_cairo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\apr-16_jakarta.txt',\n",
+       " 'os-collaboration-exercise-data\\\\apr-18_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\apr-20_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\apr-21_jakarta.txt',\n",
+       " 'os-collaboration-exercise-data\\\\apr-23_osaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\apr-23_singapore.txt',\n",
+       " 'os-collaboration-exercise-data\\\\apr-24_manila.txt',\n",
+       " 'os-collaboration-exercise-data\\\\apr-26_singapore.txt',\n",
+       " 'os-collaboration-exercise-data\\\\apr-29_manila.txt',\n",
+       " 'os-collaboration-exercise-data\\\\apr-29_melbourne.txt',\n",
+       " 'os-collaboration-exercise-data\\\\aug-02_osaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\aug-03_melbourne.txt',\n",
+       " 'os-collaboration-exercise-data\\\\aug-05_jakarta.txt',\n",
+       " 'os-collaboration-exercise-data\\\\aug-05_manila.txt',\n",
+       " 'os-collaboration-exercise-data\\\\aug-08_singapore.txt',\n",
+       " 'os-collaboration-exercise-data\\\\aug-09_dhaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\aug-09_jakarta.txt',\n",
+       " 'os-collaboration-exercise-data\\\\aug-13_shanghai.txt',\n",
+       " 'os-collaboration-exercise-data\\\\aug-14_karachi.txt',\n",
+       " 'os-collaboration-exercise-data\\\\aug-16_shanghai.txt',\n",
+       " 'os-collaboration-exercise-data\\\\aug-19_karachi.txt',\n",
+       " 'os-collaboration-exercise-data\\\\aug-19_osaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\aug-19_shanghai.txt',\n",
+       " 'os-collaboration-exercise-data\\\\aug-21_jakarta.txt',\n",
+       " 'os-collaboration-exercise-data\\\\aug-22_manila.txt',\n",
+       " 'os-collaboration-exercise-data\\\\aug-25_cairo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\aug-25_osaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\aug-26_cairo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\aug-26_jakarta.txt',\n",
+       " 'os-collaboration-exercise-data\\\\dec-03_dhaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\dec-04_dhaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\dec-05_shanghai.txt',\n",
+       " 'os-collaboration-exercise-data\\\\dec-05_singapore.txt',\n",
+       " 'os-collaboration-exercise-data\\\\dec-06_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\dec-09_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\dec-10_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\dec-11_dhaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\dec-11_jakarta.txt',\n",
+       " 'os-collaboration-exercise-data\\\\dec-17_shanghai.txt',\n",
+       " 'os-collaboration-exercise-data\\\\dec-18_cairo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\dec-18_dhaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\dec-19_shanghai.txt',\n",
+       " 'os-collaboration-exercise-data\\\\dec-21_osaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\dec-26_cairo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\dec-26_jakarta.txt',\n",
+       " 'os-collaboration-exercise-data\\\\dec-29_singapore.txt',\n",
+       " 'os-collaboration-exercise-data\\\\feb-01_osaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\feb-02_singapore.txt',\n",
+       " 'os-collaboration-exercise-data\\\\feb-04_jakarta.txt',\n",
+       " 'os-collaboration-exercise-data\\\\feb-06_karachi.txt',\n",
+       " 'os-collaboration-exercise-data\\\\feb-09_manila.txt',\n",
+       " 'os-collaboration-exercise-data\\\\feb-09_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\feb-10_osaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\feb-12_dhaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\feb-13_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\feb-17_karachi.txt',\n",
+       " 'os-collaboration-exercise-data\\\\feb-18_shanghai.txt',\n",
+       " 'os-collaboration-exercise-data\\\\feb-19_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\feb-20_cairo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\feb-20_singapore.txt',\n",
+       " 'os-collaboration-exercise-data\\\\feb-24_manila.txt',\n",
+       " 'os-collaboration-exercise-data\\\\feb-24_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jan-01_manila.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jan-04_cairo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jan-11_melbourne.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jan-16_cairo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jan-16_jakarta.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jan-18_karachi.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jan-20_cairo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jan-20_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jan-22_osaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jan-24_manila.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jan-24_melbourne.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jan-25_osaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jan-26_jakarta.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jan-26_manila.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jul-01_karachi.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jul-03_melbourne.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jul-03_shanghai.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jul-04_cairo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jul-04_karachi.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jul-06_melbourne.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jul-06_osaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jul-07_manila.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jul-07_melbourne.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jul-10_dhaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jul-10_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jul-13_osaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jul-17_singapore.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jul-18_jakarta.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jul-19_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jul-28_jakarta.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jul-28_manila.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jul-28_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jul-29_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jun-04_jakarta.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jun-05_manila.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jun-10_jakarta.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jun-11_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jun-12_karachi.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jun-16_melbourne.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jun-17_manila.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jun-18_karachi.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jun-18_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jun-20_manila.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jun-22_jakarta.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jun-25_manila.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jun-28_jakarta.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jun-29_karachi.txt',\n",
+       " 'os-collaboration-exercise-data\\\\jun-29_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\mar-04_osaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\mar-09_manila.txt',\n",
+       " 'os-collaboration-exercise-data\\\\mar-10_manila.txt',\n",
+       " 'os-collaboration-exercise-data\\\\mar-13_manila.txt',\n",
+       " 'os-collaboration-exercise-data\\\\mar-14_cairo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\mar-16_manila.txt',\n",
+       " 'os-collaboration-exercise-data\\\\mar-18_manila.txt',\n",
+       " 'os-collaboration-exercise-data\\\\mar-24_manila.txt',\n",
+       " 'os-collaboration-exercise-data\\\\may-04_dhaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\may-05_karachi.txt',\n",
+       " 'os-collaboration-exercise-data\\\\may-05_melbourne.txt',\n",
+       " 'os-collaboration-exercise-data\\\\may-08_jakarta.txt',\n",
+       " 'os-collaboration-exercise-data\\\\may-08_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\may-10_dhaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\may-12_cairo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\may-12_singapore.txt',\n",
+       " 'os-collaboration-exercise-data\\\\may-20_karachi.txt',\n",
+       " 'os-collaboration-exercise-data\\\\may-24_melbourne.txt',\n",
+       " 'os-collaboration-exercise-data\\\\may-26_dhaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\may-26_karachi.txt',\n",
+       " 'os-collaboration-exercise-data\\\\may-26_melbourne.txt',\n",
+       " 'os-collaboration-exercise-data\\\\may-26_shanghai.txt',\n",
+       " 'os-collaboration-exercise-data\\\\may-27_melbourne.txt',\n",
+       " 'os-collaboration-exercise-data\\\\may-28_shanghai.txt',\n",
+       " 'os-collaboration-exercise-data\\\\may-29_cairo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\may-30_singapore.txt',\n",
+       " 'os-collaboration-exercise-data\\\\may-30_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\nov-03_dhaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\nov-03_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\nov-04_dhaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\nov-09_karachi.txt',\n",
+       " 'os-collaboration-exercise-data\\\\nov-10_cairo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\nov-11_singapore.txt',\n",
+       " 'os-collaboration-exercise-data\\\\nov-14_karachi.txt',\n",
+       " 'os-collaboration-exercise-data\\\\nov-17_cairo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\nov-20_melbourne.txt',\n",
+       " 'os-collaboration-exercise-data\\\\nov-25_karachi.txt',\n",
+       " 'os-collaboration-exercise-data\\\\nov-25_osaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\nov-28_dhaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\oct-01_dhaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\oct-02_shanghai.txt',\n",
+       " 'os-collaboration-exercise-data\\\\oct-06_melbourne.txt',\n",
+       " 'os-collaboration-exercise-data\\\\oct-07_shanghai.txt',\n",
+       " 'os-collaboration-exercise-data\\\\oct-08_shanghai.txt',\n",
+       " 'os-collaboration-exercise-data\\\\oct-12_singapore.txt',\n",
+       " 'os-collaboration-exercise-data\\\\oct-13_singapore.txt',\n",
+       " 'os-collaboration-exercise-data\\\\oct-16_shanghai.txt',\n",
+       " 'os-collaboration-exercise-data\\\\oct-19_karachi.txt',\n",
+       " 'os-collaboration-exercise-data\\\\oct-19_melbourne.txt',\n",
+       " 'os-collaboration-exercise-data\\\\oct-19_singapore.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-01_manila.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-01_melbourne.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-02_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-04_shanghai.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-05_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-07_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-09_melbourne.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-11_jakarta.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-11_singapore.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-13_cairo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-14_osaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-15_jakarta.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-15_osaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-16_osaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-17_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-19_melbourne.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-19_osaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-20_cairo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-20_jakarta.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-20_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-21_tokyo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-22_cairo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-23_cairo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-24_cairo.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-24_jakarta.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-24_osaka.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-26_karachi.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-29_jakarta.txt',\n",
+       " 'os-collaboration-exercise-data\\\\sep-29_osaka.txt']"
+      ]
+     },
+     "execution_count": 491,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "glob.glob('**/*.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 493,
+   "id": "b6a07a0f-f8b0-4242-9fd0-b760bbb75379",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rename_my_file(glob.glob('**/*.txt'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc29ee69-af30-4073-acb9-c15409a665b4",
    "metadata": {},
    "outputs": [],
    "source": []
